--- a/index.html
+++ b/index.html
@@ -10,14 +10,18 @@
     <link href="https://fonts.googleapis.com/css2?family=Cardo:ital@0;1&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@700&family=Raleway:wght@400;600;700&display=swap" rel="stylesheet">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="./css/style.css">
     <title>Skillsstock</title>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js" integrity="sha512-894YE6QWD5I59HgZOGReFYm4dnWc1Qt5NtvYSaNcOP+u1T9qYdvdihz0PPSiiqn/+/3e7Jo4EaG7TubfWGUrMQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 </head>
+
+
+
 
 <body>
     <!-- Header -->
-    <header class="header">
+    <header class="header" id="header">
         <div class="container">
             <div class="header__inner">
                 <div class="header__logo">
@@ -30,11 +34,15 @@
                     <a href="#" class="nav__link">Testimonials</a>
                     <a href="#" class="nav__link">Download</a>
                 </nav>
+                <button class="burger" type="button">
+                    <span class="burger__item">Menu</span>
+                </button>
+
             </div>
         </div>
     </header>
     <!-- Intro -->
-    <div class="intro">
+    <div class="intro" id="intro">
         <div class="container">
             <div class="intro__inner">
                 <h1 class="intro__title">the best landing page in the world</h1>
@@ -292,8 +300,8 @@
         </div>
 
     </footer>
-
-
+    <!-- javascript -->
+    <script src="/app.js"></script>
 </body>
 
 </html>
